--- a/.github/workflows/sql-standards.yml
+++ b/.github/workflows/sql-standards.yml
@@ -12,9 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: "actions/checkout@v4"
-      # - uses: "actions/setup-python@v4"
-      #   with:
-      #       python-version: "3.8"
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v41
+        with:
+            files: models/**/*.sql
+
       - name: Install SQLFluff
         run: "pip install sqlfluff==3.0"
       - name: Lint models
