--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ dialect = sparksql
 # Specify the rules you need to run (this automatically excludes all other rules).
 # Then each rule requires its own definition.
 rules = CP01, CP02, CP03, CP04, CP05
+exclude_rules = PRS
 
 # Rule CP01 - check that keywords are lowercase.
 # E.g. select, from, where, etc.
