--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,12 @@
 [sqlfluff]
-dialect = sparksql
+dialect = databricks
+templater = dbt
 
 # Full list of rules: https://docs.sqlfluff.com/en/stable/reference/rules.html
 # Specify the rules you need to run (this automatically excludes all other rules).
 # Then each rule requires its own definition.
 rules = CP01, CP02, CP03, CP04, CP05
-exclude_rules = PRS
+
 
 # Rule CP01 - check that keywords are lowercase.
 # E.g. select, from, where, etc.
